Modified selectors parsing due to #296 - most of time was spend in selectors parser. Also added custom base64 encoding, because some default one is throwing null pointer exception on some java versions.